--- a/cashop/src/style/pages/_all.scss
+++ b/cashop/src/style/pages/_all.scss
@@ -6,15 +6,16 @@ body{
     margin: 0;
 }
 *{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Roboto';
     padding: 0;
     margin: 0;
 }
 .container{
-    max-width: 1200px;
+    max-width: 1170px;
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
+    //background: map-get($map: $theme-colors, $key:"main" );
     margin: auto;
 }
 
